Default to prater testnet, small QoL changes

--- a/default.env
+++ b/default.env
@@ -12,7 +12,7 @@ ETH1_FALLBACK_NODE2=http://eth1:8545
 # Graffiti to use for validator, in order to receive POAP
 GRAFFITI=eth2-docker
 # Network to use for eth2. If using main net, set to mainnet.
-NETWORK=pyrmont
+NETWORK=prater
 # Network to use for eth1. If using main net, set to mainnet.
 ETH1_NETWORK=goerli
 
@@ -39,8 +39,9 @@ ETH1_RPC_PORT=8545
 # ETH1 WS port, used with Nimbus. Ditto insecure, do not expose to Internet.
 ETH1_WS_PORT=8546
 
-# Uncomment this if you need to restrict teku to use 6 GiB of heap
-#TEKU_LOW_MEM=-Xmx6G
+# Uncomment this if you need to restrict teku to use 4 GiB of heap.
+# 3 would work as well other than in times of non-finality
+#TEKU_LOW_MEM=-Xmx4G
 
 # Leave this as-is to compile nimbus with support for metrics via grafana. 
 # Change to empty (nothing after first =) to disable that functionality
