--- a/lh-base.yml
+++ b/lh-base.yml
@@ -22,6 +22,7 @@ services:
     entrypoint: 
       - lighthouse
       - bn
+      - --disable-upnp
       - --datadir
       - /var/lib/lighthouse
       - --http
