rework node-exporter image, and add Node Metrics Alerts Dashboard.

--- a/default.env
+++ b/default.env
@@ -113,3 +113,6 @@ DEPCLI_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=
 DEPCLI_DOCKER_TAG=nonesuch
 DEPCLI_USER=depcli
 DEPCLI_LOCALDIR=./.eth2
+
+# For the Node Dashboard, define a regex of mount points to ignore for the diskspace check.
+NODE_EXPORTER_IGNORE_MOUNT_REGEX=^/(sys|proc|dev|run)($$|/)
