--- a/default.env
+++ b/default.env
@@ -1,7 +1,7 @@
 # Please adjust the below variable to your local user ID if you are on Linux.
 # This is vital for key import to work. You can find your UID with "echo $UID".
 LOCAL_UID=1000
-# Client choice: See SETUP.md for available options
+# Client choice: See https://eth2-docker.net/docs/Usage/ClientSetup for available options
 COMPOSE_FILE=lh-base.yml:geth.yml:lh-grafana.yml
 # ETH1 endpoint / chain source. This default uses the eth1 node container
 # For Lighthouse, you can specify multiple endpoints separated by commas
@@ -22,6 +22,20 @@ LH_PEER_COUNT=50
 TEKU_PEER_COUNT=74
 NIM_PEER_COUNT=160
 
+# Secure web proxy - advanced use, please see instructions
+DOMAIN=example.com
+ACME_EMAIL=user@example.com
+CF_EMAIL=user@example.com
+CF_API_TOKEN=SECRETTOKEN
+AWS_PROFILE=myprofile
+AWS_HOSTED_ZONE_ID=myzoneid
+GRAFANA_HOST=grafana
+PRYSM_HOST=prysm
+ETH1_HOST=eth1
+ETH1_WS_HOST=eth1ws
+DDNS_SUBDOMAIN=
+DDNS_PROXY=true
+
 # P2P ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
 ETH1_PORT=30303
@@ -34,6 +48,9 @@ TEKU_PORT=9000
 GRAFANA_PORT=3000
 # Local prysm web UI port. Do not expose to Internet, it is insecure http
 PRYSM_WEB_PORT=7500
+# Reverse proxy web port, 443 and 80 are great defaults
+TRAEFIK_WEB_PORT=443
+TRAEFIK_WEB_HTTP_PORT=80
 # ETH1 RPC port, important when using eth1-shared.yml. Also insecure, do not expose to Internet.
 ETH1_RPC_PORT=8545
 # ETH1 WS port, used with Nimbus. Ditto insecure, do not expose to Internet.
