--- a/eth1-shared.yml
+++ b/eth1-shared.yml
@@ -5,3 +5,5 @@ services:
     ports:
       - ${ETH1_RPC_PORT}:${ETH1_RPC_PORT}/tcp
       - ${ETH1_WS_PORT}:${ETH1_WS_PORT}/tcp
+  eth2:
+    image: tianon/true
