Node exporter to ignore docker volumes

--- a/default.env
+++ b/default.env
@@ -3,8 +3,9 @@
 LOCAL_UID=1000
 # Client choice: See https://eth2-docker.net/docs/Usage/ClientSetup for available options
 COMPOSE_FILE=lh-base.yml:geth.yml:lh-grafana.yml
-# ETH1 endpoint / chain source. This default uses the eth1 node container
-# For Lighthouse, you can specify multiple endpoints separated by commas
+# ETH1 endpoint / chain source. This default uses the eth1 node container.
+# Nimbus requires the URL to be ws:// or wss://
+# For Lighthouse and Nimbus, you can specify multiple endpoints separated by commas
 ETH1_NODE=http://eth1:8545
 # ETH1 fallback nodes, currently only for Prysm. Can't be empty.
 ETH1_FALLBACK_NODE1=http://eth1:8545
@@ -132,4 +133,4 @@ DEPCLI_USER=depcli
 DEPCLI_LOCALDIR=./.eth2
 
 # For the Node Dashboard, define a regex of mount points to ignore for the diskspace check.
-NODE_EXPORTER_IGNORE_MOUNT_REGEX=^/(sys|proc|dev|run)($$|/)
+NODE_EXPORTER_IGNORE_MOUNT_REGEX=^/(dev|proc|sys|run|var/lib/docker/.+)($|/)
