--- a/default.env
+++ b/default.env
@@ -5,7 +5,7 @@ LOCAL_UID=1000
 COMPOSE_FILE=lh-base.yml:geth.yml:lh-grafana.yml
 # ETH1 endpoint / chain source. This default uses the eth1 node container.
 # Nimbus requires the URL to be ws:// or wss://
-# For Lighthouse and Nimbus, you can specify multiple endpoints separated by commas
+# For Teku, Lighthouse and Nimbus, you can specify multiple endpoints separated by commas
 ETH1_NODE=http://eth1:8545
 # ETH1 fallback nodes, currently only for Prysm. Can't be empty.
 ETH1_FALLBACK_NODE1=http://eth1:8545
@@ -37,6 +37,10 @@ ETH1_WS_HOST=eth1ws
 DDNS_SUBDOMAIN=
 DDNS_PROXY=true
 
+# Teku rapid sync via initial state. Please create an Infura eth2 project first, then replace the {projectid} and {secret} here
+# and uncomment this line
+#TEKU_RAPID_SYNC=--initial-state https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/eth/v1/debug/beacon/states/finalized
+
 # P2P ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
 ETH1_PORT=30303
@@ -56,10 +60,6 @@ TRAEFIK_WEB_HTTP_PORT=80
 ETH1_RPC_PORT=8545
 # ETH1 WS port, used with Nimbus. Ditto insecure, do not expose to Internet.
 ETH1_WS_PORT=8546
-
-# Uncomment this if you need to restrict teku to use 4 GiB of heap.
-# 3 would work as well other than in times of non-finality
-#TEKU_LOW_MEM=-Xmx4G
 
 # Leave this as-is to compile nimbus with support for metrics via grafana. 
 # Change to empty (nothing after first =) to disable that functionality
