--- a/teku-base.yml
+++ b/teku-base.yml
@@ -15,7 +15,7 @@ services:
     volumes:
       - teku-data:/var/lib/teku
     environment:
-      - JAVA_OPTS=${TEKU_LOW_MEM}
+      - JAVA_OPTS=-XX:SoftMaxHeapSize=2g
     ports:
       - ${TEKU_PORT}:${TEKU_PORT}/tcp
       - ${TEKU_PORT}:${TEKU_PORT}/udp
@@ -24,13 +24,14 @@ services:
       - --data-path=/var/lib/teku
       - --log-destination=CONSOLE
       - --network=${NETWORK}
-      - --eth1-endpoint=${ETH1_NODE}
+      - --eth1-endpoints=${ETH1_NODE}
       - --p2p-port=${TEKU_PORT}
       - --p2p-peer-upper-bound=${TEKU_PEER_COUNT}
       - --validators-keystore-locking-enabled=true
       - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
       - --validators-graffiti=${GRAFFITI}
       - --logging=${LOG_LEVEL}
+    command: ${TEKU_RAPID_SYNC}
   validator-import:
     restart: "no"
     user: ${LOCAL_UID}:${LOCAL_UID}
